--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=root
-spring.data.mongodb.password=root
+spring.data.mongodb.username=user1
+spring.data.mongodb.password=user1
 spring.data.mongodb.database=sherooz
 
 server.port=8000
