--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.auto-index-creation=true
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.username=user1
-spring.data.mongodb.password=user1
-spring.data.mongodb.database=sherooz
+spring.data.mongodb.port=${MONGO_HOST_PORT:26000}
+spring.data.mongodb.username=${MONGO_DB_USERNAME:user1}
+spring.data.mongodb.password=${MONGO_DB_PASSWORD:user1}
+spring.data.mongodb.database=${MONGO_DB:sherooz}
 
 server.port=8000
