fix mongo docker

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 SERVER_HOST_PORT=8000
 MONGO_HOST_PORT=27017
 # host paths to mount
-MONGO_DATA_HOST_PATH="/data/db/"
-MONGO_LOG_HOST_PATH="/var/log/mongodb/"
-MONGO_INITDB_SCRIPTS_HOST_PATH="/docker-entrypoint-initdb.d/"
+MONGO_DATA_HOST_PATH="./mongodb/data/db"
+MONGO_LOG_HOST_PATH="./mongodb/log/mongodb"
+MONGO_INITDB_SCRIPTS_HOST_PATH="./mongodb/initdb.d"
 # application
 APP_NAME=sherooz
 NETWORK_NAME=sherooz-network
