--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.data.mongodb.username=${MONGO_DB_USERNAME:user1}
 spring.data.mongodb.password=${MONGO_DB_PASSWORD:user1}
 spring.data.mongodb.database=${MONGO_DB:sherooz}
 
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:61613}
+
 server.port=8000
