--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,10 @@ spring.data.mongodb.database=${MONGO_DB:sherooz}
 spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:61613}
 
+spring.output.ansi.enabled=always
+logging.level.com.logging = TRACE
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}) [%highlight(%-5level)] %c{1.} [%yellow(%t)] : %msg%n%throwable
+logging.file.name = error.log
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss.SSS} [%level] %c{1.} [%t] %m%n
+
 server.port=8000
