start upload file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.file.name = error.log
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss.SSS} [%level] %c{1.} [%t] %m%n
 
 server.port=8000
+
+setting.upload.dir=/uploads/
+setting.upload.maxsize=10485760
