thumbnail for image and pdf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,6 @@ logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss.SSS} [%level] %c{1.} [%t] %m%n
 server.port=8000
 
 setting.upload.dir=/uploads/
-setting.upload.maxsize=10485760
+setting.upload.thumbnail.dir=/uploads/thumbnail/
+setting.upload.maxsize=100485760
+setting.upload.thumbnail.size=200
