--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:17.0.1-jdk-slim
 
-COPY ../../target/SheroozDrive-0.0.1-SNAPSHOT.jar  app.jar
+COPY ../../target/*.jar  /app/app.jar
+WORKDIR /app
+RUN mkdir -p /app/uploads
 EXPOSE 8000
 ENTRYPOINT ["java","-jar","app.jar"]
