set arvancloud.ir in dockerFile set crossOrigin("*") in controllers set Customizer.withDefaults() in SecurityConfig.java for cors config upgrade springdoc in 2 to 2.0.4 upgrade apache.commons in 4.4 to 4.2 and others....

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   mongo:
-    image: mongo:4.4
+    image: docker.arvancloud.ir/mongo:4.4
     container_name: mongo
     hostname: mongo
     #restart: unless-stopped
