--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17.0.1-jdk-slim
+FROM docker.arvancloud.ir/openjdk:17.0.1-jdk-slim
 
 COPY ../../target/*.jar  /app/app.jar
 WORKDIR /app
