use tus protocol

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.data.mongodb.password=${MONGO_DB_PASSWORD:user1}
 spring.data.mongodb.database=${MONGO_DB:sherooz}
 
 spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
-spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:61613}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
 
 spring.output.ansi.enabled=always
 logging.level.com.logging = TRACE
@@ -21,3 +21,11 @@ server.port=8000
 setting.upload.dir=/uploads/
 setting.upload.maxsize=100485760
 setting.upload.thumbnail.size=200
+
+rabbitmq.websoket.port=61613
+rabbitmq.exchange=sms_exchange
+rabbitmq.routingkey=sms_routingkey
+rabbitmq.queue=sms_notification
+
+tusserver.tusmaxsize=1073741824
+tusserver.storagefolder=uploads
